--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BACKEND
-server.port=1948
+server.port=1992
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://mysqldb:3306/fullstackdb1
@@ -10,4 +10,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
